 cnp-egress-pci-dss-1.2.3-block-cardholder-data-over-internet-2xq67-n.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-egress-pci-dss-1.2.3-block-cardholder-data-over-internet-8977h94
  namespace: kube-system
spec:
  description: "do not allow direct connection outbound between cardholder to internet"
  endpointSelector: 
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
  namespace: kube-system
